# audit-log-api

./: .gitignore  .precommit.yaml  README.md  docker-compose.yml  nginx.conf
api/: Dockerfile  README.md  pyproject.toml  pytest.ini
api/cache/: cache_db_0.11.db.wal
api/core/: app.py  config.py  limiter.py  main.py  sample.env  test.py
api/core/agent/: __init__.py  engine_client.py  llm.py  pandas_agent.py  prompt.py  smart_agent.py  tool_format.py  tools.py
api/core/data/: 1140m_access.json  sample_entries.json
api/core/database/: __init__.py  base.py  engine.py  permission.py  postgres_crud.py  postgres_intialization.py  schemas.py  setup.py  trigger.py
api/core/database/CRUD/: __init__.py  creation.py  deletion.py  retrieve.py
api/core/models/: __init__.py  authen.py  entry.py
api/core/routes/: authentication.py
api/core/routes/v1/: audit_log.py  audit_log_ws.py  chatbot.py  tenant.py
api/core/schemas/: __init__.py  base.py
api/core/schemas/payloads/: authentication.py  chatbot.py  logs.py  tenant.py
api/core/schemas/v1/: chat.py  enum.py  logs.py  session.py  tenant.py  user.py
api/core/security/: access_token.py
api/core/services/: __init__.py  authentication.py  base.py  bg_workers.py  security.py  simple_notification.py  simple_queue.py  sqs.py  websocket.py
api/core/test/: 1140m_acccess.json  async_router_logs.py  notebook.ipynb  sample_entries.json  sync_route_logs.py
ui/: Dockerfile  pyproject.toml
ui/core/: main.py  test.py
